--- a/Data_Preprocessing_Assignment.ipynb
+++ b/Data_Preprocessing_Assignment.ipynb
@@ -433,7 +433,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e1606751",
+   "id": "89cd7bd2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1097,7 +1097,7 @@
   {
    "cell_type": "code",
    "execution_count": 75,
-   "id": "169c6b22",
+   "id": "170b7f4f",
    "metadata": {},
    "outputs": [
     {
@@ -1372,7 +1372,7 @@
   {
    "cell_type": "code",
    "execution_count": 55,
-   "id": "cf604a56",
+   "id": "fef1209f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1386,7 +1386,7 @@
   {
    "cell_type": "code",
    "execution_count": 56,
-   "id": "f92a4628",
+   "id": "ced985a7",
    "metadata": {},
    "outputs": [
     {
@@ -1408,7 +1408,7 @@
   {
    "cell_type": "code",
    "execution_count": 57,
-   "id": "a42797c6",
+   "id": "4ae0df3a",
    "metadata": {},
    "outputs": [
     {
@@ -1436,7 +1436,7 @@
   {
    "cell_type": "code",
    "execution_count": 58,
-   "id": "008bc036",
+   "id": "d9597e6f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1446,7 +1446,7 @@
   {
    "cell_type": "code",
    "execution_count": 59,
-   "id": "ccc828fc",
+   "id": "86aeee46",
    "metadata": {},
    "outputs": [
     {
@@ -1721,7 +1721,7 @@
   {
    "cell_type": "code",
    "execution_count": 87,
-   "id": "0387330c",
+   "id": "be38f213",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1731,7 +1731,7 @@
   {
    "cell_type": "code",
    "execution_count": 88,
-   "id": "ee51745f",
+   "id": "c5d477d5",
    "metadata": {},
    "outputs": [
     {
@@ -2102,8 +2102,397 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 90,
+   "id": "13b064b7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dataset=pd.concat([datan,datal],axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 91,
+   "id": "3050c9ba",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id</th>\n",
+       "      <th>age</th>\n",
+       "      <th>bp</th>\n",
+       "      <th>sg</th>\n",
+       "      <th>al</th>\n",
+       "      <th>su</th>\n",
+       "      <th>bgr</th>\n",
+       "      <th>bu</th>\n",
+       "      <th>sc</th>\n",
+       "      <th>sod</th>\n",
+       "      <th>...</th>\n",
+       "      <th>pcv</th>\n",
+       "      <th>wc</th>\n",
+       "      <th>rc</th>\n",
+       "      <th>htn</th>\n",
+       "      <th>dm</th>\n",
+       "      <th>cad</th>\n",
+       "      <th>appet</th>\n",
+       "      <th>pe</th>\n",
+       "      <th>ane</th>\n",
+       "      <th>classification</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>48.0</td>\n",
+       "      <td>80.0</td>\n",
+       "      <td>1.020</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>121.000000</td>\n",
+       "      <td>36.0</td>\n",
+       "      <td>1.2</td>\n",
+       "      <td>137.528754</td>\n",
+       "      <td>...</td>\n",
+       "      <td>44</td>\n",
+       "      <td>7800</td>\n",
+       "      <td>5.2</td>\n",
+       "      <td>yes</td>\n",
+       "      <td>yes</td>\n",
+       "      <td>no</td>\n",
+       "      <td>good</td>\n",
+       "      <td>no</td>\n",
+       "      <td>no</td>\n",
+       "      <td>ckd</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1.0</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>50.0</td>\n",
+       "      <td>1.020</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>148.036517</td>\n",
+       "      <td>18.0</td>\n",
+       "      <td>0.8</td>\n",
+       "      <td>137.528754</td>\n",
+       "      <td>...</td>\n",
+       "      <td>38</td>\n",
+       "      <td>6000</td>\n",
+       "      <td>5.2</td>\n",
+       "      <td>no</td>\n",
+       "      <td>no</td>\n",
+       "      <td>no</td>\n",
+       "      <td>good</td>\n",
+       "      <td>no</td>\n",
+       "      <td>no</td>\n",
+       "      <td>ckd</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2.0</td>\n",
+       "      <td>62.0</td>\n",
+       "      <td>80.0</td>\n",
+       "      <td>1.010</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>423.000000</td>\n",
+       "      <td>53.0</td>\n",
+       "      <td>1.8</td>\n",
+       "      <td>137.528754</td>\n",
+       "      <td>...</td>\n",
+       "      <td>31</td>\n",
+       "      <td>7500</td>\n",
+       "      <td>5.2</td>\n",
+       "      <td>no</td>\n",
+       "      <td>yes</td>\n",
+       "      <td>no</td>\n",
+       "      <td>poor</td>\n",
+       "      <td>no</td>\n",
+       "      <td>yes</td>\n",
+       "      <td>ckd</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>3.0</td>\n",
+       "      <td>48.0</td>\n",
+       "      <td>70.0</td>\n",
+       "      <td>1.005</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>117.000000</td>\n",
+       "      <td>56.0</td>\n",
+       "      <td>3.8</td>\n",
+       "      <td>111.000000</td>\n",
+       "      <td>...</td>\n",
+       "      <td>32</td>\n",
+       "      <td>6700</td>\n",
+       "      <td>3.9</td>\n",
+       "      <td>yes</td>\n",
+       "      <td>no</td>\n",
+       "      <td>no</td>\n",
+       "      <td>poor</td>\n",
+       "      <td>yes</td>\n",
+       "      <td>yes</td>\n",
+       "      <td>ckd</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>4.0</td>\n",
+       "      <td>51.0</td>\n",
+       "      <td>80.0</td>\n",
+       "      <td>1.010</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>106.000000</td>\n",
+       "      <td>26.0</td>\n",
+       "      <td>1.4</td>\n",
+       "      <td>137.528754</td>\n",
+       "      <td>...</td>\n",
+       "      <td>35</td>\n",
+       "      <td>7300</td>\n",
+       "      <td>4.6</td>\n",
+       "      <td>no</td>\n",
+       "      <td>no</td>\n",
+       "      <td>no</td>\n",
+       "      <td>good</td>\n",
+       "      <td>no</td>\n",
+       "      <td>no</td>\n",
+       "      <td>ckd</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>395</th>\n",
+       "      <td>395.0</td>\n",
+       "      <td>55.0</td>\n",
+       "      <td>80.0</td>\n",
+       "      <td>1.020</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>140.000000</td>\n",
+       "      <td>49.0</td>\n",
+       "      <td>0.5</td>\n",
+       "      <td>150.000000</td>\n",
+       "      <td>...</td>\n",
+       "      <td>47</td>\n",
+       "      <td>6700</td>\n",
+       "      <td>4.9</td>\n",
+       "      <td>no</td>\n",
+       "      <td>no</td>\n",
+       "      <td>no</td>\n",
+       "      <td>good</td>\n",
+       "      <td>no</td>\n",
+       "      <td>no</td>\n",
+       "      <td>notckd</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>396</th>\n",
+       "      <td>396.0</td>\n",
+       "      <td>42.0</td>\n",
+       "      <td>70.0</td>\n",
+       "      <td>1.025</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>75.000000</td>\n",
+       "      <td>31.0</td>\n",
+       "      <td>1.2</td>\n",
+       "      <td>141.000000</td>\n",
+       "      <td>...</td>\n",
+       "      <td>54</td>\n",
+       "      <td>7800</td>\n",
+       "      <td>6.2</td>\n",
+       "      <td>no</td>\n",
+       "      <td>no</td>\n",
+       "      <td>no</td>\n",
+       "      <td>good</td>\n",
+       "      <td>no</td>\n",
+       "      <td>no</td>\n",
+       "      <td>notckd</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>397</th>\n",
+       "      <td>397.0</td>\n",
+       "      <td>12.0</td>\n",
+       "      <td>80.0</td>\n",
+       "      <td>1.020</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>100.000000</td>\n",
+       "      <td>26.0</td>\n",
+       "      <td>0.6</td>\n",
+       "      <td>137.000000</td>\n",
+       "      <td>...</td>\n",
+       "      <td>49</td>\n",
+       "      <td>6600</td>\n",
+       "      <td>5.4</td>\n",
+       "      <td>no</td>\n",
+       "      <td>no</td>\n",
+       "      <td>no</td>\n",
+       "      <td>good</td>\n",
+       "      <td>no</td>\n",
+       "      <td>no</td>\n",
+       "      <td>notckd</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>398</th>\n",
+       "      <td>398.0</td>\n",
+       "      <td>17.0</td>\n",
+       "      <td>60.0</td>\n",
+       "      <td>1.025</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>114.000000</td>\n",
+       "      <td>50.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>135.000000</td>\n",
+       "      <td>...</td>\n",
+       "      <td>51</td>\n",
+       "      <td>7200</td>\n",
+       "      <td>5.9</td>\n",
+       "      <td>no</td>\n",
+       "      <td>no</td>\n",
+       "      <td>no</td>\n",
+       "      <td>good</td>\n",
+       "      <td>no</td>\n",
+       "      <td>no</td>\n",
+       "      <td>notckd</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>399</th>\n",
+       "      <td>399.0</td>\n",
+       "      <td>58.0</td>\n",
+       "      <td>80.0</td>\n",
+       "      <td>1.025</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>131.000000</td>\n",
+       "      <td>18.0</td>\n",
+       "      <td>1.1</td>\n",
+       "      <td>141.000000</td>\n",
+       "      <td>...</td>\n",
+       "      <td>53</td>\n",
+       "      <td>6800</td>\n",
+       "      <td>6.1</td>\n",
+       "      <td>no</td>\n",
+       "      <td>no</td>\n",
+       "      <td>no</td>\n",
+       "      <td>good</td>\n",
+       "      <td>no</td>\n",
+       "      <td>no</td>\n",
+       "      <td>notckd</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>400 rows × 26 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        id   age    bp     sg   al   su         bgr    bu   sc         sod  \\\n",
+       "0      0.0  48.0  80.0  1.020  1.0  0.0  121.000000  36.0  1.2  137.528754   \n",
+       "1      1.0   7.0  50.0  1.020  4.0  0.0  148.036517  18.0  0.8  137.528754   \n",
+       "2      2.0  62.0  80.0  1.010  2.0  3.0  423.000000  53.0  1.8  137.528754   \n",
+       "3      3.0  48.0  70.0  1.005  4.0  0.0  117.000000  56.0  3.8  111.000000   \n",
+       "4      4.0  51.0  80.0  1.010  2.0  0.0  106.000000  26.0  1.4  137.528754   \n",
+       "..     ...   ...   ...    ...  ...  ...         ...   ...  ...         ...   \n",
+       "395  395.0  55.0  80.0  1.020  0.0  0.0  140.000000  49.0  0.5  150.000000   \n",
+       "396  396.0  42.0  70.0  1.025  0.0  0.0   75.000000  31.0  1.2  141.000000   \n",
+       "397  397.0  12.0  80.0  1.020  0.0  0.0  100.000000  26.0  0.6  137.000000   \n",
+       "398  398.0  17.0  60.0  1.025  0.0  0.0  114.000000  50.0  1.0  135.000000   \n",
+       "399  399.0  58.0  80.0  1.025  0.0  0.0  131.000000  18.0  1.1  141.000000   \n",
+       "\n",
+       "     ...  pcv    wc   rc  htn   dm cad appet   pe  ane classification  \n",
+       "0    ...   44  7800  5.2  yes  yes  no  good   no   no            ckd  \n",
+       "1    ...   38  6000  5.2   no   no  no  good   no   no            ckd  \n",
+       "2    ...   31  7500  5.2   no  yes  no  poor   no  yes            ckd  \n",
+       "3    ...   32  6700  3.9  yes   no  no  poor  yes  yes            ckd  \n",
+       "4    ...   35  7300  4.6   no   no  no  good   no   no            ckd  \n",
+       "..   ...  ...   ...  ...  ...  ...  ..   ...  ...  ...            ...  \n",
+       "395  ...   47  6700  4.9   no   no  no  good   no   no         notckd  \n",
+       "396  ...   54  7800  6.2   no   no  no  good   no   no         notckd  \n",
+       "397  ...   49  6600  5.4   no   no  no  good   no   no         notckd  \n",
+       "398  ...   51  7200  5.9   no   no  no  good   no   no         notckd  \n",
+       "399  ...   53  6800  6.1   no   no  no  good   no   no         notckd  \n",
+       "\n",
+       "[400 rows x 26 columns]"
+      ]
+     },
+     "execution_count": 91,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dataset"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 101,
+   "id": "56b36753",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "csv=dataset.to_csv(\"preprocessedckd.csv\",index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 102,
+   "id": "e42f2ffd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "csv"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "e69faa4a",
+   "id": "8a1cb43b",
    "metadata": {},
    "outputs": [],
    "source": []
